--- a/index.html
+++ b/index.html
@@ -331,6 +331,40 @@
             font-size: 0.9rem;
         }
 		
+		/* 模态框样式 */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 10px;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
+        }
+
+        .close-modal {
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            color: white;
+            font-size: 40px;
+            cursor: pointer;
+            transition: color 0.3s;
+        }
+
+        .close-modal:hover {
+            color: #4b6cb7;
+        }
     </style>
 </head>
 <body>
@@ -391,6 +425,12 @@
         您的浏览器不支持音频元素。
     </audio>
     
+	<!-- 图片预览模态框 -->
+    <div class="modal" id="image-modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="modal-image">
+    </div>
+	
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const music = document.getElementById('birthdayMusic');
@@ -417,70 +457,82 @@
                 });
                 document.body.removeEventListener('click', initAudio);
             });
-        });
-		
-		const photos = [
-            {
-                id: 1,
-                title: "山间日出",
-                description: "清晨的第一缕阳光洒在山巅"
-            },
-            {
-                id: 2,
-                title: "海边日落",
-                description: "金色的夕阳映照在海面上"
-            },
-            {
-                id: 3,
-                title: "森林小径",
-                description: "漫步在宁静的森林小路上"
-            },
-            {
-                id: 4,
-                title: "城市夜景",
-                description: "灯火辉煌的城市夜晚"
-            },
-            {
-                id: 5,
-                title: "雪山之巅",
-                description: "白雪覆盖的壮丽山峰"
-            },
-            {
-                id: 6,
-                title: "田园风光",
-                description: "宁静的乡村田园景色"
-            }
-        ];
-		
-		function getPhotoUrl(index) {
-            return `https://raw.githubusercontent.com/winsfc/winsfc.github.io/refs/heads/main/photos/photo${index}.png`;
-        }
+			
+			const photos = [
+				{
+					id: 1,
+					title: "山间日出",
+					description: "清晨的第一缕阳光洒在山巅"
+				},
+				{
+					id: 2,
+					title: "海边日落",
+					description: "金色的夕阳映照在海面上"
+				},
+				{
+					id: 3,
+					title: "森林小径",
+					description: "漫步在宁静的森林小路上"
+				},
+				{
+					id: 4,
+					title: "城市夜景",
+					description: "灯火辉煌的城市夜晚"
+				},
+				{
+					id: 5,
+					title: "雪山之巅",
+					description: "白雪覆盖的壮丽山峰"
+				},
+				{
+					id: 6,
+					title: "田园风光",
+					description: "宁静的乡村田园景色"
+				}
+			];
+			
+			function getPhotoUrl(index) {
+				return `https://raw.githubusercontent.com/winsfc/winsfc.github.io/refs/heads/main/photos/photo${index}.png`;
+			}
 
-        // 初始化照片库
-        function renderPhotos() {
 			const gallery = document.querySelector('.photo-gallery');
-            gallery.innerHTML = '';
-            photos.forEach(photo => {
-				photoUrl = getPhotoUrl(photo.id);
-                const photoCard = document.createElement('div');
-                photoCard.className = 'photo-card';
-                photoCard.innerHTML = `
-                    <img src="${photoUrl}" alt="${photo.title}">
-                    <div class="photo-info">
-                        <h3>${photo.title}</h3>
-                        <p>${photo.description}</p>
-                    </div>
-                `;
-                photoCard.addEventListener('click', () => {
-                    modal.style.display = 'flex';
-                    modalImg.src = photoUrl;
-                });
-                gallery.appendChild(photoCard);
-            });
-        }
+			const modal = document.getElementById('image-modal');
+			const modalImg = document.getElementById('modal-image');
+			const closeModal = document.querySelector('.close-modal');
+			// 初始化照片库
+			function renderPhotos() {
+				gallery.innerHTML = '';
+				photos.forEach(photo => {
+					photoUrl = getPhotoUrl(photo.id);
+					const photoCard = document.createElement('div');
+					photoCard.className = 'photo-card';
+					photoCard.innerHTML = `
+						<img src="${photoUrl}" alt="${photo.title}">
+						<div class="photo-info">
+							<h3>${photo.title}</h3>
+							<p>${photo.description}</p>
+						</div>
+					`;
+					photoCard.addEventListener('click', () => {
+						modal.style.display = 'flex';
+						modalImg.src = photoUrl;
+					});
+					gallery.appendChild(photoCard);
+				});
+			}
+			
+			closeModal.addEventListener('click', () => {
+				modal.style.display = 'none';
+			});
+			modal.addEventListener('click', (e) => {
+				if (e.target === modal) {
+					modal.style.display = 'none';
+				}
+			});
 		
-		// 初始化
-		renderPhotos();
+			// 初始化
+			renderPhotos();
+        });
 		
     </script>
 </body>
