--- a/content.html
+++ b/content.html
@@ -598,7 +598,33 @@
         }
 
         .close-modal:hover {
-            color: #4b6cb7;
+       	    color: #4b6cb7;
+        }
+
+        /* 重新覆盖移动端微信里的照片布局，保证居中显示 */
+        @media (max-width: 768px) {
+            .photo-gallery {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 30px 10px;
+            }
+
+            .photo-card {
+                width: 100%;
+                max-width: 360px;
+                margin: 0 auto 20px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .photo-gallery {
+                padding: 20px 10px;
+            }
+
+            .photo-card {
+                max-width: 340px;
+            }
         }
 		
     </style>
